findbugs fixes